Optimize bootstrap initialization and Java decoding
Assisted-by: codex:gpt-6-astra